@@ -60,6 +60,9 @@ RUN curl -fsSL ${JENKINS_URL} -o /usr/share/jenkins/jenkins.war \
 ENV JENKINS_UC https://updates.jenkins.io
 ENV JENKINS_UC_EXPERIMENTAL=https://updates.jenkins.io/experimental
 ENV JENKINS_INCREMENTALS_REPO_MIRROR=https://repo.jenkins-ci.org/incrementals
+ENV JAVA_OPTS=" -Djava.awt.headless=true -Djenkins.install.runSetupWizard=false -Xmx8192m -Xms4G -XX:MaxPermSize=4096M -XX:+UseG1GC -XX:+ExplicitGCInvokesConcurrent" 
+ENV JENKINS_OPTS=" --handlerCountMax=300"
+
 RUN chown -R ${user} "$JENKINS_HOME" /usr/share/jenkins/ref
 
 # for main web interface:
